# seatbelt-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: ffi.rs  lib.rs  sandbox.rs  str_ext.rs
tests/: sbpl.rs
